@startuml MediLink Class Diagram - Refactored

' Title and Styling
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #F5F5F5
    BackgroundColor<<DTO>> #E3F2FD
    BorderColor Black
    ArrowColor Black
}

package "MediLink.Data" {
    class PatientRecord {
        + PatientID : int
        - _fullName : string
        - _dob : DateTime
        - _nik : string
        - _medicalHistory : string
        - _phoneNumber : string
        - _emailAddress : string
        - _emergencyContact : string
        
        + GetBasicInfo() : (int, string)
        + GenerateReport() : string
        + GetPersonalData() : PersonalDataDTO
        + GetLegalMedicalData() : LegalMedicalDataDTO
    }
    
    abstract class User {
        + UserID : int
        + FullName : string
        - _passwordHash : string
        - _authToken : string
        
        + ValidatePassword(input: string) : bool
        + GenerateNewToken() : string
        + ResetPassword(newPassword: string) : void
        + {abstract} GetUserData() : object
    }

    class Doctor {
        + SpecialtyID : int
        - _medicalLicenseNumber : string
        + GetUserData() : DoctorDataDTO
    }

    class Admin {
        + AccessLevel : int
        + Role : string
        + GetUserData() : AdminDataDTO
    }

    class MedicalSpecialty {
        + SpecialtyID : int
        + Name : string
        + Description : string
        + GetDisplayName() : string
    }
}

package "MediLink.Business" {
    class Prescription {
        + PrescriptionID : Guid
        + PatientID : int
        + DoctorID : int
        - _drugName : string
        + Dosage : string
        + DrugCost : decimal
        
        + Create(patientID: int, doctorID: int) : void
    }

    class Appointment {
        + AppointmentID : Guid
        + PatientID : int
        + DoctorID : int
        + AppointmentDate : DateTime
        + Duration : int
        + Status : string
        + Notes : string
        + Schedule() : void
        + Cancel() : void
        + Reschedule(newDate: DateTime) : void
        + Complete() : void
    }
}

package "MediLink.Services" {
    class PharmacyOrder {
        + OrderID : Guid
        + PrescriptionID : Guid
        + OrderDate : DateTime
        + Status : string
        
        + MarkFulfilled() : void
    }
}

Doctor --|> User
Admin --|> User
Doctor --> MedicalSpecialty : references

' Relationships
Prescription "*" --> "1" PatientRecord : references
Prescription "*" --> "1" Doctor : references

PharmacyOrder "1" o-- "1" Prescription : fulfills

Appointment "*" --> "1" PatientRecord : scheduled for
Appointment "*" --> "1" Doctor : with

@enduml
